# avif-parse

./: .gitmodules  Cargo.toml  README.md  avif_parse.h
examples/: dump_av1.rs
mp4parse/: Cargo.toml
mp4parse/src/: lib.rs  tests.rs
mp4parse/tests/: public.rs
src/: boxes.rs  c_api.rs  lib.rs  obu.rs  tests.rs
tests/: hdr-clli-mdcv.avif  hdr-clli.avif  hdr-mdcv.avif  public.rs
