[package]
name = "avif-parse"
version = "0.13.2"
authors = [
  "Ralph Giles <giles@mozilla.com>",
  "Matthew Gregan <kinetik@flim.org>",
  "Alfredo Yang <ayang@mozilla.com>",
  "Jon Bauman <jbauman@mozilla.com>",
  "Kornel Lesiński <kornel@geekhood.net>",
]
edition = "2018"
description = "Parser for AVIF image files"
documentation = "https://docs.rs/avif-parse/"
license = "MPL-2.0"
categories = ["multimedia::images"]
repository = "https://github.com/kornelski/avif-parse"
readme = "README.md"
include = ["README.md", "Cargo.toml", "LICENSE", "/src/*.rs", "avif_parse.h"]
keywords = ["demuxer", "image", "parser", "heif"]

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
byteorder = "1.4.2"
bitreader = "0.3.3"
log = "0.4.14"
static_assertions = "1.1.0"
fallible_collections = { version = "0.4.0", features = ["std_io"] }

[dev-dependencies]
env_logger = "0.8.2"
walkdir = "2.3.1"

[features]
# Enable mp4parse_fallible to use fallible memory allocation rather than
# panicking on OOM.  Note that this is only safe within Gecko where the system
# allocator has been globally overridden (see BMO 1457359).
mp4parse_fallible = []
