[package]
name = "avif-parse"
version = "2.0.0"
authors = [
  "Kornel Lesiński <kornel@geekhood.net>",
  "Ralph Giles <giles@mozilla.com>",
  "Matthew Gregan <kinetik@flim.org>",
  "Alfredo Yang <ayang@mozilla.com>",
  "Jon Bauman <jbauman@mozilla.com>",
]
edition = "2024"
description = "Parser for AVIF image files"
documentation = "https://docs.rs/avif-parse/"
license = "MPL-2.0"
categories = ["multimedia::images"]
repository = "https://github.com/kornelski/avif-parse"
readme = "README.md"
include = ["/README.md", "/Cargo.toml", "/LICENSE", "/src/*.rs", "/avif_parse.h"]
keywords = ["demuxer", "image", "parser", "heif"]
rust-version = "1.90"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
byteorder = "1.5.0"
bitreader = "0.3.8"
leb128 = "0.2.5"
log = "0.4.20"
fallible_collections = { version = "0.5.1", default-features = false, features = ["std"] }
arrayvec = "0.7.6"

[dev-dependencies]
env_logger = "0.11"
walkdir = "2.4.0"

[features]
# Export symbols for C
c_api = []

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
