[package]
name = "avif-parse"
version = "0.12.0"
authors = [
  "Ralph Giles <giles@mozilla.com>",
  "Matthew Gregan <kinetik@flim.org>",
  "Alfredo Yang <ayang@mozilla.com>",
  "Jon Bauman <jbauman@mozilla.com>",
  "Kornel Lesiński <kornel@geekhood.net>",
]
edition = "2018"
description = "Parser for AVIF image files"
documentation = "https://docs.rs/avif-parse/"
license = "MPL-2.0"
categories = ["multimedia::images"]
repository = "https://github.com/kornelski/avif-parse"
readme = "README.md"

# Avoid complaints about trying to package test files.
exclude = [
  "*.mp4",
  "av1-avif/*"
]

[dependencies]
byteorder = "1.2.1"
bitreader = { version = "0.3.2" }
fallible_collections = { version = "0.1.3", features = ["std_io"] }
log = "0.4"
static_assertions = "1.1.0"

[dev-dependencies]
env_logger = "0.7.1"
walkdir = "2.3.1"
